# docflow-rag

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: conversations.py  documents.py  evals.py  namespaces.py  query.py  router.py  websocket.py
backend/app/core/: __init__.py  auth.py  exceptions.py  rate_limit.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/repositories/: __init__.py  conversation.py  document.py  evaluation.py
backend/app/evaluation/: __init__.py  metrics.py  runner.py
backend/app/evaluation/datasets/: benchmark_v1.json
backend/app/ingestion/: __init__.py  chunker.py  embedder.py  indexer.py  parser.py  worker.py
backend/app/mcp/: __init__.py  server.py
backend/app/retrieval/: __init__.py  graph.py  state.py
backend/app/retrieval/nodes/: __init__.py  analyze.py  generate.py  grade.py  rerank.py  retrieve.py  rewrite.py  route.py
backend/app/retrieval/strategies/: __init__.py  hybrid.py  semantic_cache.py
backend/app/services/: __init__.py  llm.py  milvus.py  redis.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: test_query_flow.py
backend/tests/integration/: test_ingestion_pipeline.py  test_mcp_server.py  test_retrieval_flow.py
backend/tests/unit/: test_chunker.py  test_graph_nodes.py  test_semantic_cache.py
docs/: 01-proposal.md  03-architecture.md  (+4 more)
(+47 files in other folders)
