[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docflow-rag"
version = "0.1.0"
description = "Production-grade Agentic RAG engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0,<0.4",
    "langgraph>=0.3.0,<0.4",
    "pymilvus>=2.4.0,<2.5",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "redis>=5.2.0",
    "unstructured[pdf,md,html]>=0.16.0",
    "dspy>=2.5.0",
    "sentence-transformers>=3.3.0",
    "FlagEmbedding>=1.2.0",
    "mcp>=1.0.0",
    "arize-phoenix>=5.0.0",
    "alembic>=1.14.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
